# cs2-antistrat

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  codeql.yml
.streamlit/: config.toml
db/: schema.sql
docs/: adr.md  architecture-decision-record.md  github-process-checklist.md  github-project-backlog.md  schema.sql  tech-stack-decision-record.md  techstack.md  user-stories-acceptance-criteria.md
docs/stories/: demo_ingestion.md  persistence_querying.md  side_round_filtering.md
src/antistrat/api/: main.py
src/antistrat/db/: base.py  models.py  session.py
src/antistrat/ingestion/: loader.py  parser.py
src/antistrat/utils/: logging_config.py  maps.py
src/antistrat/viz/: radar.py
tests/: test_e2e_pipeline.py  test_ingestion_utils.py  test_integration_loader_db.py  test_loader_identity.py  test_smoke.py
